--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
 , "devDependencies":
   { "babel": "5.x" }
 , "scripts":
-  { "babel": "./node_modules/babel/bin/babel/index.js --out-dir lib src"
-  , "start": "DEBUG=wololobot:* ./node_modules/babel/bin/babel-node ./server" }
+  { "babel": "./node_modules/.bin/babel --out-dir lib src"
+  , "start": "DEBUG=wololobot:* ./node_modules/.bin/babel-node ./server" }
 }
