use updated slate-irc-twitch `init` option

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   , "knex": "^0.7.6"
   , "object-assign": "2.x"
   , "slate-irc": "^0.8.1"
-  , "slate-irc-twitch": "1.x"
+  , "slate-irc-twitch": "^1.0.2"
   , "sqlite3": "^3.0.5" }
 , "devDependencies":
   { "babel": "5.x" }
