--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   , "debounce": "^1.0.0"
   , "debug": "2.x"
   , "irc-message": "3.x"
-  , "knex": "^0.7.6"
+  , "knex": "0.x"
   , "object-assign": "2.x"
   , "slate-irc": "^0.8.1"
   , "slate-irc-twitch": "^1.0.2"
