--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   , "request": "2.x"
   , "slate-irc": "^0.8.1"
   , "slate-irc-twitch": "^1.0.2"
-  , "sqlite3": "^3.0.5" }
+  , "sqlite3": "^3.0.5"
+  , "html-to-text": "^1.3.0"
+  , "countdown": "mckamey/countdownjs#v2.5.2" }
 , "devDependencies":
   { "babel": "5.x" }
 , "scripts":
