--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   , "slate-irc": "^0.8.1"
   , "slate-irc-twitch": "^1.0.2"
   , "sqlite3": "^3.0.5"
-  , "html-to-text": "^1.3.0"
+  , "strip": "^0.0.7"
   , "countdown": "mckamey/countdownjs#v2.5.2" }
 , "devDependencies":
   { "babel": "5.x" }
