--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   , "slate-irc-twitch": "^1.0.2"
   , "sqlite3": "^3.0.5"
   , "strip": "^0.0.7"
-  , "countdown": "mckamey/countdownjs#v2.5.2" }
+  , "countdown": "mckamey/countdownjs#v2.5.2"
+  , "timezone-abbr-offsets": "^1.0.1" }
 , "devDependencies":
   { "babel": "5.x" }
 , "scripts":
