--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   , "bluebird": "^2.9.26"
   , "countdown": "mckamey/countdownjs#v2.5.2"
   , "debounce": "^1.0.0"
-  , "debug": "2.x"
-  , "irc-message": "3.x"
-  , "knex": "0.x"
-  , "object-assign": "2.x"
-  , "request": "2.x"
+  , "debug": "^2.2.0"
+  , "irc-message": "^3.0.2"
+  , "knex": "^0.9.0"
+  , "object-assign": "^2.1.1"
+  , "request": "^2.67.0"
   , "slate-irc": "^0.8.1"
   , "slate-irc-twitch": "^1.0.2"
   , "sqlite3": "^3.0.5"
   , "strip": "^0.0.7"
   , "timezone-abbr-offsets": "^1.0.1" }
 , "devDependencies":
-  { "babel": "5.x" }
+  { "babel": "^5.8.35" }
 , "scripts":
   { "babel": "./node_modules/.bin/babel --out-dir lib src"
   , "start": "DEBUG=wololobot:* ./bin/wololobot" }
