--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "countdown": "mckamey/countdownjs#v2.5.2",
     "debounce": "^1.0.0",
     "debug": "^2.2.0",
+    "delay": "^1.3.1",
     "irc-message": "^3.0.2",
     "knex": "^0.12.6",
     "request": "^2.67.0",
