--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "debounce": "^1.0.0",
     "debug": "^2.2.0",
     "delay": "^1.3.1",
+    "got": "^6.7.1",
     "irc-message": "^3.0.2",
     "knex": "^0.12.6",
-    "request": "^2.67.0",
     "slate-irc": "^0.9.0",
     "slate-irc-twitch": "^2.0.1",
     "sqlite3": "^3.0.5",
