--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "debug": "^2.2.0",
     "delay": "^1.3.1",
     "got": "^6.7.1",
+    "group-by": "0.0.1",
+    "index-by": "0.0.1",
     "irc-message": "^3.0.2",
     "knex": "^0.12.6",
     "ms": "^0.7.2",
