--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "group-by": "0.0.1",
     "index-by": "0.0.1",
     "irc-message": "^3.0.2",
+    "join-component": "^1.1.0",
     "knex": "^0.12.6",
     "ms": "^0.7.2",
+    "random-int": "^1.0.0",
+    "random-item": "^1.0.0",
     "slate-irc": "^0.9.0",
     "slate-irc-twitch": "^2.0.1",
     "sqlite3": "^3.0.5",
