--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "group-by": "0.0.1",
     "index-by": "0.0.1",
     "irc-message": "^3.0.2",
+    "is-async-supported": "^1.2.0",
     "join-component": "^1.1.0",
     "knex": "^0.12.6",
     "ms": "^1.0.0",
